--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: objective-c
 osx_image: xcode7.3
 xcode_workspace: books.xcworkspace
 xcode_scheme: books
+
+script:
+  - xcodebuild [DEFAULT_OPTIONS] CODE_SIGNING_REQUIRED=NO
