Added quick actions.

--- a/books/Info.plist
+++ b/books/Info.plist
@@ -6,7 +6,22 @@
 	<string>Uses the device&apos;s camera to scan book barcodes.</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
-		<string></string>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeAdd</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).ScanBarcode</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Scan Barcode</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeSearch</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).SearchOnline</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Search Online</string>
+		</dict>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
