--- a/books.xcodeproj/xcshareddata/xcschemes/books.xcscheme
+++ b/books.xcodeproj/xcshareddata/xcschemes/books.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0800"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -27,24 +27,32 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "xcrun simctl uninstall booted ${PRODUCT_BUNDLE_IDENTIFIER}">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "495C5D0B1BF1404D00E00C07"
+                     BuildableName = "Reading List.app"
+                     BlueprintName = "books"
+                     ReferencedContainer = "container:books.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "495C5D1F1BF1404D00E00C07"
-               BuildableName = "booksTests.xctest"
-               BlueprintName = "booksTests"
-               ReferencedContainer = "container:books.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "495C5D2A1BF1404D00E00C07"
-               BuildableName = "booksUITests.xctest"
-               BlueprintName = "booksUITests"
+               BlueprintIdentifier = "496270081DBF83840009CC3C"
+               BuildableName = "books_UITests.xctest"
+               BlueprintName = "books_UITests"
                ReferencedContainer = "container:books.xcodeproj">
             </BuildableReference>
          </TestableReference>
