--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
 osx_image: xcode8
-script: xcodebuild -workspace books.xcworkspace -scheme books -sdk iphonesimulator CODE_SIGNING_REQUIRED=NO
+script:
+  - xcodebuild -workspace books.xcworkspace -scheme books -sdk iphonesimulator CODE_SIGNING_REQUIRED=NO
+  - xctool test -workspace books.xcworkspace -scheme books -sdk iphonesimulator
