--- a/books.xcodeproj/xcshareddata/xcschemes/books.xcscheme
+++ b/books.xcodeproj/xcshareddata/xcschemes/books.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:books.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "496270081DBF83840009CC3C"
+               BuildableName = "books_UITests.xctest"
+               BlueprintName = "books_UITests"
+               ReferencedContainer = "container:books.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
