--- a/books/Info.plist
+++ b/books/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Can add photos as book covers.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Uses the device&apos;s camera to scan book barcodes.</string>
+	<string>Uses the camera to scan book barcodes.</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
