--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,3 @@
 language: objective-c
-osx_image: xcode8
-podfile: Podfile
-before_install:
- - rvm install ruby-2.2.2 #cocoapods 1.0.0 requirement not yet supported ootb by travis
- - gem install cocoapods # Since Travis is not always on latest version
- - pod install
-script:
-  - xcodebuild -workspace books.xcworkspace -scheme books -sdk iphonesimulator CODE_SIGNING_REQUIRED=NO
-#  - xcodebuild test -workspace books.xcworkspace -scheme books -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.0' CODE_SIGNING_REQUIRED=NO
+osx_image: xcode8.1
+xcode_project: books.xcodeproj
