Suppress cocoapod repo update output

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode8.1
 xcode_project: books.xcodeproj
 before_install:
-  - pod repo update
+  - pod repo update > /dev/null
