--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
-osx_image: xcode8.1
+osx_image: xcode8.2
 before_install:
   - pod repo update > /dev/null
-xcode_project: books.xcodeproj
-xcode_scheme: books
+xcode_workspace: books.xcodeproj
+script:
+  - xcodebuild test -workspace books.xcworkspace -scheme books -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2'
