Change to travis build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: objective-c
 osx_image: xcode8.2
 before_install:
   - pod repo update > /dev/null
-xcode_workspace: books.xcodeproj
 script:
+  - xcodebuild clean build -workspace books.xcworkspace -scheme books
   - xcodebuild test -workspace books.xcworkspace -scheme books -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1'
