--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-theme: jekyll-theme-cayman
+# Site settings
 title: Reading List
-description: An iOS app to track book reading
+tag_text: Reading List
+description: Reading List, on iPhone, iPad and iPod touch, is an app to track and record personal reading lists.
+
+# Build settings
+markdown: kramdown
+exclude: ["README.md"]
+sass:
+  style: compressed
