--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ description: Reading List, on iPhone, iPad and iPod touch, is an app to track an
 markdown: kramdown
 exclude: ["README.md"]
 sass:
+  sass_dir: docs/_sass
   style: compressed
