Update barcode scan quick action icon

--- a/books/Info.plist
+++ b/books/Info.plist
@@ -45,8 +45,8 @@
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
-			<key>UIApplicationShortcutItemIconType</key>
-			<string>UIApplicationShortcutIconTypeAdd</string>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Barcode</string>
 			<key>UIApplicationShortcutItemTitle</key>
 			<string>Scan Barcode</string>
 			<key>UIApplicationShortcutItemType</key>
