Setup EarlGrey testing framework

--- a/books.xcodeproj/xcshareddata/xcschemes/ReadingListEarlGrey.xcscheme
+++ b/books.xcodeproj/xcshareddata/xcschemes/ReadingListEarlGrey.xcscheme
@@ -1,40 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0910"
-   version = "1.7">
+   LastUpgradeVersion = "0920"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "495C5D0B1BF1404D00E00C07"
-               BuildableName = "Reading List.app"
-               BlueprintName = "books"
-               ReferencedContainer = "container:books.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "496270081DBF83840009CC3C"
-               BuildableName = "books_UITests.xctest"
-               BlueprintName = "books_UITests"
-               ReferencedContainer = "container:books.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -42,45 +12,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = ""
       shouldUseLaunchSchemeArgsEnv = "NO">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "xcrun simctl uninstall booted ${PRODUCT_BUNDLE_IDENTIFIER}">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "495C5D0B1BF1404D00E00C07"
-                     BuildableName = "Reading List.app"
-                     BlueprintName = "books"
-                     ReferencedContainer = "container:books.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "496270081DBF83840009CC3C"
-               BuildableName = "books_UITests.xctest"
-               BlueprintName = "books_UITests"
-               ReferencedContainer = "container:books.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "491612A11DCD20FA0086D7E5"
-               BuildableName = "books_UnitTests.xctest"
-               BlueprintName = "books_UnitTests"
-               ReferencedContainer = "container:books.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
@@ -141,8 +73,7 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "495C5D0B1BF1404D00E00C07"
@@ -150,7 +81,7 @@
             BlueprintName = "books"
             ReferencedContainer = "container:books.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
